<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2015-present, Total Location Test Paragraph.
 All rights reserved.

 This file is part of Where@. Where@ is free software:
 you can redistribute it and/or modify it under the terms of
 the GNU General Public License (GPL), either version 3
 of the License, or (at your option) any later version.

 Where@ is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. For more details,
 see the full license at <http://www.gnu.org/licenses/gpl-3.0.en.html>
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="true"
    >
    <PreferenceCategory
        android:title="@string/pref_category_intervals_title"
        android:key="pref_category_key_interval"
        >

        <ListPreference
            android:key="@string/pref_loc_share_interval_key"
            android:title="@string/pref_loc_share_interval_title"
            android:summary="%s"
            android:dialogTitle="@string/pref_loc_share_interval_title"
            android:entries="@array/pref_loc_share_interval_labels"
            android:entryValues="@array/pref_loc_share_interval_values"
            android:defaultValue="@string/pref_loc_share_interval_value_0"
            />
        
        <ListPreference
            android:key="@string/pref_loc_ttl_key"
            android:title="@string/pref_loc_ttl_title"
            android:summary="%s"
            android:dialogTitle="@string/pref_loc_ttl_title"
            android:entries="@array/pref_loc_ttl_labels"
            android:entryValues="@array/pref_loc_ttl_values"
            android:defaultValue="@string/pref_loc_ttl_value_1"
            />

    </PreferenceCategory>
</PreferenceScreen>