<!--
 Copyright (c) 2015-present, Total Location Test Paragraph.
 All rights reserved.

 This file is part of Where@. Where@ is free software:
 you can redistribute it and/or modify it under the terms of
 the GNU General Public License (GPL), either version 3
 of the License, or (at your option) any later version.

 Where@ is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. For more details,
 see the full license at <http://www.gnu.org/licenses/gpl-3.0.en.html>
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/menu_bar">

    <item
        android:id="@id/action_map"
        android:title="@string/map_activity_title" />

    <item
        android:id="@id/action_on_off"
        android:title="@string/main_activity_title" />

    <item
        android:id="@id/action_prefs"
        android:title="@string/pref_activity_title" />

</menu>
